--- a/day7/css/general-styles.css
+++ b/day7/css/general-styles.css
@@ -1,14 +1,14 @@
 body {
 	margin:0;
 	padding:0;
-	font-family: 'Courier', serif;  
+	font-family: 'Courier', serif;
 }
 
 form{
 	width:70%;
 	margin:4% 15%;
 }
- 
+
 
 div#envelope{
 	width: 55%;
@@ -27,7 +27,7 @@ header{
 	margin-bottom: -8px;
 	border-radius: 10px 10px 0 0;
 	color: white;
-} 
+}
 
 input[type=submit]
 {
@@ -39,4 +39,5 @@ input[type=submit]
 	color: white;
 	font-size:45px;
 	cursor:pointer;
+	background-color: #4180C5;
 }
