--- a/day16/templates/layout.html
+++ b/day16/templates/layout.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <title>Day 16</title>
-<!--
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
--->
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" >
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script type="text/javascript"> var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+<script type="text/javascript"> 
+  var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
 {% block body %}{% endblock %}
